Perbaikan Data Barang, KFA

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -264,7 +264,6 @@ file.reference.spring-web-5.3.30.jar=C:\\Users\\Admin\\Documents\\dist\\lib\\spr
 file.reference.spring.jar=C:\\Users\\Admin\\Documents\\dist\\lib\\spring.jar
 file.reference.sqleonardo-2009.03.rc1.jar=C:\\Users\\Admin\\Documents\\dist\\lib\\sqleonardo-2009.03.rc1.jar
 file.reference.styled-xml-parser-8.0.5.jar=C:\\Users\\Admin\\Documents\\dist\\lib\\styled-xml-parser-8.0.5.jar
-file.reference.super-Downloads=/home/super/Downloads
 file.reference.svg-8.0.5.jar=C:\\Users\\Admin\\Documents\\dist\\lib\\svg-8.0.5.jar
 file.reference.swing-layout-1.0.4.jar=C:\\Users\\Admin\\Documents\\dist\\lib\\swing-layout-1.0.4.jar
 file.reference.swing-worker-1.1.jar=C:\\Users\\Admin\\Documents\\dist\\lib\\swing-worker-1.1.jar
@@ -291,7 +290,7 @@ javac.test.modulepath=\
     ${javac.modulepath}
 javadoc.html5=false
 jlink.launcher=false
-jlink.launcher.name=SIMRSKhanza
+jlink.launcher.name=SIMRS
 jnlp.signing.alias=
 javac.source=1.8
 # Optional override of default Application-Library-Allowable-Codebase attribute identifying the locations where your signed RIA is expected to be found.
@@ -331,7 +330,7 @@ build.test.classes.dir=${build.dir}/test/classes
 platform.active=default_platform
 endorsed.classpath=
 javadoc.encoding=${source.encoding}
-dist.jar=${dist.dir}/SIMRSKhanza.jar
+dist.jar=${dist.dir}/SIMRS.jar
 meta.inf.dir=${src.dir}/META-INF
 javadoc.nonavbar=false
 javac.external.vm=false
@@ -353,7 +352,7 @@ javac.test.processorpath=${javac.test.classpath}
 jnlp.signing.keystore=
 dist.archive.excludes=
 build.dir=build
-application.title=SIMRSKhanza
+application.title=SIMRS
 javadoc.windowtitle=
 annotation.processing.enabled=true
 build.generated.sources.dir=${build.dir}/generated-sources
@@ -903,7 +902,6 @@ javac.classpath=\
     ${file.reference.httpclient5-5.2.1.jar}:\
     ${file.reference.httpcore5-5.2.1.jar}:\
     ${file.reference.httpcore5-h2-5.3.1.jar}:\
-    ${file.reference.super-Downloads}
 javadoc.additionalparam=
 build.classes.dir=${build.dir}/classes
 javac.target=1.8
