FIX Lis x SIMRS

--- a/KhanzaAntrianLoket/nbproject/project.properties
+++ b/KhanzaAntrianLoket/nbproject/project.properties
@@ -614,7 +614,7 @@ javac.classpath=\
     ${file.reference.xmlgraphics-commons-2.3.jar}:\
     ${file.reference.xmlgraphics-commons-2.4.jar}:\
     ${file.reference.xmpbox-2.0.13.jar}
-javadoc.additionalparam=
+#javadoc.additionalparam=
 build.classes.dir=${build.dir}/classes
 javac.target=1.8
 mkdist.disabled=false
