--- a/KhanzaHMSAutoVerify2/nbproject/project.properties
+++ b/KhanzaHMSAutoVerify2/nbproject/project.properties
@@ -564,7 +564,7 @@ javac.classpath=\
     ${file.reference.src.zip}:\
     ${file.reference.mysql-connector-java-5.1.47.jar}:\
     ${file.reference.rhino-1.7.10.jar}
-javadoc.additionalparam=
+#javadoc.additionalparam=
 build.classes.dir=${build.dir}/classes
 javac.target=12
 mkdist.disabled=false
