--- a/KhanzaHMSServiceMandiri/nbproject/project.properties
+++ b/KhanzaHMSServiceMandiri/nbproject/project.properties
@@ -215,7 +215,7 @@ file.reference.SceneBuilderKit-8.2.0.jar=/Users/windiartonugroho/Lib/SceneBuilde
 annotation.processing.enabled.in.editor=false
 file.reference.jasperreports-metadata-6.8.0.jar=/Users/windiartonugroho/Lib/jasperreports-metadata-6.8.0.jar
 file.reference.jl1.0.jar=/Users/windiartonugroho/Lib/jl1.0.jar
-javadoc.additionalparam=
+#javadoc.additionalparam=
 file.reference.activation-1.1.1.jar=/Users/windiartonugroho/Lib/activation-1.1.1.jar
 file.reference.poi-examples-4.1.0.jar=/Users/windiartonugroho/Lib/poi-examples-4.1.0.jar
 file.reference.jackson-all-1.9.0.jar=/Users/windiartonugroho/Lib/jackson-all-1.9.0.jar
