--- a/KhanzaPengenkripsiTeks/nbproject/project.properties
+++ b/KhanzaPengenkripsiTeks/nbproject/project.properties
@@ -77,7 +77,7 @@ main.class=khanzapengenkripsiteks.KhanzaPengenkripsiTeks
 javadoc.notree=false
 javac.classpath=\
     ${file.reference.KhanzaSecurity16bit.jar}
-javadoc.additionalparam=
+#javadoc.additionalparam=
 build.classes.dir=${build.dir}/classes
 javac.target=1.8
 mkdist.disabled=false
