--- a/KhanzaSecurity16bit/nbproject/project.properties
+++ b/KhanzaSecurity16bit/nbproject/project.properties
@@ -57,7 +57,7 @@ javac.test.modulepath=\
     ${javac.modulepath}
 javac.test.processorpath=\
     ${javac.test.classpath}
-javadoc.additionalparam=
+#javadoc.additionalparam=
 javadoc.author=false
 javadoc.encoding=${source.encoding}
 javadoc.html5=false
