--- a/KhanzaUpdater/nbproject/project.properties
+++ b/KhanzaUpdater/nbproject/project.properties
@@ -20,7 +20,7 @@ javac.processorpath=${javac.classpath}
 javac.target=1.8
 annotation.processing.processors.list=
 javadoc.noindex=false
-javadoc.additionalparam=
+#javadoc.additionalparam=
 includes=**
 build.classes.dir=${build.dir}/classes
 run.test.modulepath=\
