--- a/KhanzaCetakAntrianLoket/nbproject/project.properties
+++ b/KhanzaCetakAntrianLoket/nbproject/project.properties
@@ -614,7 +614,7 @@ javac.classpath=\
     ${file.reference.jackson-dataformat-csv-2.12.1-javadoc.jar}:\
     ${file.reference.jackson-dataformat-csv-2.12.1-sources.jar}:\
     ${file.reference.jackson-dataformat-csv-2.12.1.jar}
-javadoc.additionalparam=
+#javadoc.additionalparam=
 build.classes.dir=${build.dir}/classes
 javac.target=1.8
 mkdist.disabled=false
